src/test/resources/reject/printlnNoSemicolon.ul
int id1 ()
{
    println "string"
}
